nenolod     2006/04/10 00:52:30 UTC	(20060410-5029)
  Log:
  - improvements to HP patch
  

  Changes:	Modified:
  +2 -2		trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/10 00:44:19 UTC	(20060410-5027)
  Log:
  - a few enhancements to the HP patch
  

  Changes:	Modified:
  +4 -3		trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/10 00:40:50 UTC	(20060410-5025)
  Log:
  - HP patch. Copyright (c) 2006 Kiyoshi Aman <kiyoshi.aman -at- gmail.com>
  

  Changes:	Modified:
  +36 -16	trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/09 21:59:58 UTC	(20060409-5023)
  Log:
  - more memory fixes sorry
  

  Changes:	Modified:
  +9 -9		trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/09 21:40:48 UTC	(20060409-5021)
  Log:
  - acknowledge that the game has been won after the wumpus is killed
  

  Changes:	Modified:
  +1 -0		trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/09 21:29:49 UTC	(20060409-5019)
  Log:
  - don't blindly free our vector
  

  Changes:	Modified:
  +5 -1		trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/09 21:15:45 UTC	(20060409-5017)
  Log:
  more sanity checking

  Changes:	Modified:
  +6 -3		trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/09 21:11:23 UTC	(20060409-5015)
  Log:
  add declaration

  Changes:	Modified:
  + -		trunk/contrib/os_fuckover.c (File Added) 
  +1 -0		trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/09 21:08:55 UTC	(20060409-5013)
  Log:
  - reset game state when maze generation fails
  

  Changes:	Modified:
  +1 -0		trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/09 20:18:28 UTC	(20060409-5011)
  Log:
  - implement the ability to kill the wumpus:
    it takes 7 hits to kill him as his strength/speed gets divided by two each time:
     60 -> 30 -> 15 -> 7 -> 3 -> 1 -> 0 (0.5, but because speed is an int, it becomes 0).
  

  Changes:	Modified:
  +34 -10	trunk/contrib/wumpus.c (File Modified) 

